--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ body {
 	color: #000;
 	font-family: 'Roboto', sans-serif;
 	font-size: 16px;
+  text-align: justify ;
 }
 
 .wrapper {
@@ -52,7 +53,7 @@ nav {
   /* background-color: #eee; */
   margin:0;
   display: flex;
-  width: 100%;
+  width: 262px;
   align-items: center;
   flex-flow: row wrap;
   justify-content: center;
@@ -83,7 +84,7 @@ nav h3 {
 
 #news {
   width: 95%;
-  margin: 2%;
+  margin: 2% 2% 0 2%;
   display: flex;
   flex-flow: column nowrap;
 }
@@ -106,6 +107,98 @@ nav h3 {
 
 #news h3 {
   font-size: .75em;
+}
+
+/* ----------------------------- SIGHTS STYLES ----------------------------- */
+
+.sights h1 {
+  margin: 0;
+  text-align: center;
+  margin: 10%;
+}
+
+* {box-sizing:border-box}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+/* Hide the images by default */
+.mySlides {
+  display: none;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
 }
 
 /* ----------------------------- SOUNDS STYLES ----------------------------- */
@@ -135,21 +228,54 @@ nav h3 {
   width: 95%;
 }
 
-#merch div {
+#merch section {
   background-color: #444;
   color: #eee;
   padding: 1% 4%;
   border-top: 2% solid #eee;
   border-bottom: 3px solid #eee;
+  display: flex;
+  flex-flow: column nowrap;
+}
+
+.merch-new-cd {
+  display: flex;
+  flex-flow: row wrap;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+#merch img {
+  float: left;
+  margin-right: 10px;
 }
 
 #merch h2 {
   text-align: center;
+  word-wrap: normal;
 }
 
 #merch a:link {
   color: #fff;
   font-weight: bold;
+}
+
+#merch li {
+  list-style-type: decimal-leading-zero ;
+}
+
+/* ----------------------------- FOOTER STYLES ----------------------------- */
+
+.footer h1 {
+  margin: 10;
+  text-align: center;
+  border-top: 1px solid #000;
+  border-bottom: 1px solid #000;
+  padding: 15px 0 15px 0;
+}
+
+.footer h1 {
+  text-align: center;
 }
 
 /* ----------------------------- BREAKPOINTS ----------------------------- */
@@ -158,15 +284,24 @@ nav h3 {
 	body {
 		font-size: 1em;
 	}
+  nav {
+    width: 100%;
+  }
 	h1 {
-		font-size: 1.25em;
+		font-size: 1.75em;
 	}
+  .merch-new-cd {
+    justify-content: space-around;
+  }
 }
 
 @media (min-width: 900px) and (max-width: 1199px)  {
 	body {
-		font-size: 1.25em;
+		font-size: 1em;
 	}
+  nav {
+    width: 100%;
+  }
 	h1 {
 		font-size: 1.75em;
 	}
@@ -174,9 +309,15 @@ nav h3 {
 
 @media (min-width: 1200px)  {
 	body {
-		font-size: 1.5em;
+		font-size: 1em;
 	}
+  nav {
+    width: 100%;
+  }
 	h1 {
-		font-size: 2em;
+		font-size: 3em;
 	}
-} 
+  h3 {
+    font-size: 3em;
+  }
+}
